[package]
name = "hitting_grass"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.legion]
version = "*"
default-features = false
features = ["codegen"]


[dependencies]
rand = "*"
vector2d = "2.2.0"


[target.'cfg(not(windows))'.dependencies.sdl2]
version = "*"
default-features = false

